# VariableDifusa

./: .gitignore  CMakeLists.txt  ConjuntoDifuso.cpp  ConjuntoDifuso.h  ConjuntosDifusos.sln  ConjuntosDifusos.vcxproj  ConjuntosDifusos.vcxproj.filters  Librerias.h  Trapezoidal.cpp  Trapezoidal.h  Triangular.cpp  Triangular.h  VariableDifusa.h
apps/: main.cpp  main_1.cpp  main_2.cpp
include/: ConjuntoDifuso.h  GeneradorVariables.h  Librerias.h  Premisa.h  Regla.h  SistemaDifuso.h  Trapezoidal.h  Triangular.h  VariableDifusa.h
pipeline/: main.py  reader.cpp  reader.h
src/: ConjuntoDifuso.cpp  ConjuntosDifusos.cpp  GeneradorVariables.cpp  Premisa.cpp  Regla.cpp  SistemaDifuso.cpp  Trapezoidal.cpp  Triangular.cpp  VariableDifusa.cpp  main.cpp
